--- a/Pipfile
+++ b/Pipfile
@@ -3,9 +3,10 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
-[dev-packages]
-
 [packages]
+fastdotcom = "*"
+python-crontab = "*"
+tinydb = "*"
 
 [requires]
 python_version = "3.8"
