--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 certifi==2020.6.20
 chardet==3.0.4
 fastdotcom==0.0.3
-idna==2.9
+idna==2.10
 python-crontab==2.5.1
 python-dateutil==2.8.1
+python-dotenv==0.13.0
 requests==2.24.0
 six==1.15.0
+tinydb==4.1.1
 urllib3==1.25.9
